Criação da Entidade Pessoa, juntamente com o metodos de
* DELETE
* PUT
* FINDALL
* GETBYID

Inclusão de novos tratamentos de exceções no GuavaExceptionHandler.java

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,12 @@ spring.jpa.hibernate.ddl-auto=create-drop
 
 # Configuracao para Mostrar as Query no Log 
 spring.jpa.show-sql=true
+
+# Configuracao Jackson 
+# Essa propriedade do Spring Boot não permite transforma um requisição JSON em Objeto Java caso não exista todas as variaveis do Objeto Java
+spring.jackson.deserialization.fail-on-unknown-properties=true
+
+# Status Code
+# 2XX -> Sucesso
+# 4XX -> Erro do Cliente
+# 5XX -> Erro no Serviço/Servidor
