--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.jpa.database=POSTGRESQL
 spring.datasource.platform=postgres
 spring.database.driverClassName=org.postgresql.Driver
-spring.datasource.url= jdbc:postgresql://localhost:5432/guavaapi?createDatabaseIfNotExist=true&useSSL=false
+spring.datasource.url= jdbc:postgresql://localhost:5432/guavaapi
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
@@ -20,3 +20,6 @@ spring.jackson.deserialization.fail-on-unknown-properties=true
 # 2XX -> Sucesso
 # 4XX -> Erro do Cliente
 # 5XX -> Erro no Serviço/Servidor
+
+#FORMATAR A DATA
+spring.jackson.date-format=yyyy-MM-dd
