Configuração Maven e começo da implementação do WebSecurity

--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
 	<modelVersion>4.0.0</modelVersion>
+
 	<parent>
 		<groupId>br.com.guava</groupId>
 		<artifactId>guava-lib</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
+		<relativePath>../guava-lib</relativePath> 
 	</parent>
+
 	<artifactId>guava-api</artifactId>
 	<packaging>jar</packaging>
+	<name>guava-api</name>
+	
 </project>
