--- a/pom.xml
+++ b/pom.xml
@@ -13,5 +13,13 @@
 	<artifactId>guava-api</artifactId>
 	<packaging>jar</packaging>
 	<name>guava-api</name>
+
+	<dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-configuration-processor</artifactId>
+			<optional>true</optional>
+		</dependency>
+	</dependencies>
 	
 </project>
