Alterações feitas para solucinar problemas ocorridos durante a tentativa de separar o projeto em varios projetos.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,5 +21,7 @@ spring.jackson.deserialization.fail-on-unknown-properties=true
 # 4XX -> Erro do Cliente
 # 5XX -> Erro no Serviço/Servidor
 
+#SENHA DO MOBILE gu@v@_m0b1l30
+
 #FORMATAR A DATA
 spring.jackson.date-format=yyyy-MM-dd
