--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,2 +1,8 @@
 #CONFIGURACAO APLICAÇÂO EM PRODUÇÂO
 guava.security.security=true
+guava.origin-permitida=https://guavamoney-js.herokuapp.com
+
+#CONFIGURAÇÃO ENDEREÇOS DATABASE 
+spring.datasource.url={JDBC_DATABASE_URL}
+spring.datasource.username={JDBC_DATABASE_USERNAME}
+spring.datasource.password={JDBC_DATABASE_PASSWORD}
