--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,7 @@
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
-			<version>${postgres.driver.version}</version>
+<!-- 			<version>${postgres.driver.version}</version> -->
 			<scope>runtime</scope>
 		</dependency>
 		
@@ -73,12 +73,12 @@
 			<artifactId>jackson-datatype-jsr310</artifactId>
 		</dependency>
 		
-		<!-- Hibernate Envers -->
+		<!-- Hibernate Envers 
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-envers</artifactId>
 			<version>5.3.3.Final</version>
-		</dependency>
+		</dependency> -->
 		
 		<!-- LOMBOK -->
 		<dependency>
