adequação dos scripts de migração

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 # Configurações para conexao do banco de dados
-spring.jpa.database=POSTGRESQL
-spring.datasource.platform=postgres
-spring.database.driverClassName=org.postgresql.Driver
+#spring.datasource.platform=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/guavaapi
+spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+spring.jpa.database=POSTGRESQL
 
 # Sempre que inicializar a aplicação ele vai deletar e depois criar tudo novamente porem sem registros
 spring.jpa.hibernate.ddl-auto=create-drop
@@ -25,3 +25,5 @@ spring.jackson.deserialization.fail-on-unknown-properties=true
 
 #FORMATAR A DATA
 spring.jackson.date-format=yyyy-MM-dd
+#PROFILE DE SEGURANÇA UTILIZADO
+spring.profiles.active=basic-security
