--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
 			<!-- Other properties version -->
-		<postgres.driver.version>9.4-1200-jdbc41</postgres.driver.version>
+		<postgres.driver.version>9.3-1104-jdbc4</postgres.driver.version>
 	</properties>
 
 	<dependencies>
@@ -51,7 +51,7 @@
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
-<!-- 			<version>${postgres.driver.version}</version> -->
+			<version>${postgres.driver.version}</version>
 			<scope>runtime</scope>
 		</dependency>
 		
