--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,5 +26,5 @@ spring.jackson.deserialization.fail-on-unknown-properties=true
 #FORMATAR A DATA
 spring.jackson.date-format=yyyy-MM-dd
 #PROFILE DE SEGURANÇA UTILIZADO
-#spring.profiles.active=oauth-security
-spring.profiles.active=basic-security
+spring.profiles.active=oauth-security
+#spring.profiles.active=basic-security
