Criação do relatorio de lancamentos, envio de email, schedule

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,9 @@ spring.jackson.date-format=yyyy-MM-dd
 #PROFILE DE SEGURANÇA UTILIZADO
 spring.profiles.active=oauth-security
 #spring.profiles.active=basic-security
+
+#Configuração de Envio do E-mail
+guava.mail.host=smtp.gmail.com
+guava.mail.port=587
+guava.mail.user-name=testes.algaworks
+guava.mail.password=algaworks.testes
